--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="Static website boilerplate using webpack and bootstrap">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Static Website Boilerplate</title>
+		<title>React Static Website Boilerplate</title>
 
 		<!-- Disable tap highlight on IE -->
 		<meta name="msapplication-tap-highlight" content="no">
@@ -31,9 +31,6 @@
 		<!-- Color the status bar on mobile devices -->
 		<meta name="theme-color" content="#263238">
 	</head>
-	<body class="container">
-		<div class="jumbotron">
-			<h1><i class="fa fa-globe"></i> Static Website Boilerplate</h1>
-		</div>
-	</body>
+	<body>
+		<div id="container"></div>
 </html>
